--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -2,32 +2,36 @@
   <h1 class="title">Account Settings</h1>
 </div>
 
-<form class="register-form" (submit)="onUpdateSubmit()">
-
-  <h3>Submit Profile Updates</h3>
-
-  <div class="form-element">
-    <label class="form-label">Preferred Email: </label>
-    <input class="form-textbox" type="text" [(ngModel)]="email" name="email">
+<div class="text-container">
+  <button class="collapse-header" (click)="expand(0)">Update Profile</button>
+  <div class="collapse-panel">
+    <form class="settings-form" (submit)="onUpdateSubmit()">
+      <div class="form-element">
+        <label class="form-label">Preferred Email: </label>
+        <input class="form-textbox" type="text" [(ngModel)]="email" name="email">
+      </div>
+      <div class="form-element">
+        <label class="form-label">Phone Number (Optional): </label>
+        <input class="form-textbox" type="text" [(ngModel)]="sms_number" name="sms_number">
+        <p class="form-explanation">This will be used to send you custom alerts, if desired.</p>
+      </div>
+      <div class="form-element">
+        <input class="button-dark selectDisable" id="form-button-stretch" type="submit">
+      </div>
+    </form>
+    <br><hr>
   </div>
-  <div class="form-element">
-    <label class="form-label">Phone Number (Optional): </label>
-    <input class="form-textbox" type="text" [(ngModel)]="sms_number" name="sms_number">
-    <p class="form-explanation">This will be used to send you custom alerts, if desired.</p>
+  <button class="collapse-header" (click)="expand(1)">Delete Profile</button>
+  <div class="collapse-panel">
+    <form class="settings-form" (submit)="onDeleteSubmit()">
+      <div class="form-element">
+        <button type="submit" class="button-dark selectDisable" id="form-button-stretch">Delete Profile</button>
+        <br><br><p class="form-explanation"><strong>WARNING:</strong> This action cannot be undone and permanently deletes all user data.</p>
+      </div>
+    </form>
+    <br><hr>
   </div>
-  <div class="form-element">
-    <input class="button-dark selectDisable" id="form-button-stretch" type="submit">
-  </div>
-
-  <br><br><hr><br><br>
-
-  <h3>Delete Profile</h3>
-
-  <div class="form-element">
-    <button type="button" class="button-dark selectDisable" id="form-button-stretch" (click)="onDeleteSubmit()">Delete Profile</button>
-    <br><br><p class="form-explanation"><strong>WARNING:</strong> This action cannot be undone and permanently deletes all user data.</p>
-  </div>
-</form>
+</div>
 
 <!-- Delete Account Modal -->
 <div id="deleteModal" class="modal">
