--- a/frontend/src/assets/css/dashboard-table.css
+++ b/frontend/src/assets/css/dashboard-table.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
+.dashboard-table-row {
+  cursor: pointer;
+}
+
 .dashboard-table .dashboard-table-cell {
   padding: 10px;
 
