--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -19,30 +19,32 @@
     a production release. As such, if you decide to use our service, please
     consider carefully the data that is transferred through this service.
   </p>
-  <div class="about-vertical-container">
-    <h3>Github</h3>
-    <a href="https://github.com/MrCerealKiller/homestead-project" target="_blank">
-      <img class="selectDisable"
-           id="github-img"
-           src="/assets/img/github.png"
-           alt="Img-Email"/>
-    </a>
-    <p>
-      This project is open source and posted on Github. To access, collaborate,
-      or report bugs please click on the above image.
-    </p>
-  </div>
-  <div class="about-vertical-container right">
-    <h3>Email</h3>
-    <a href="mailto:jgomallette@gmail.com">
-      <img class="selectDisable"
-           id="email-img"
-           src="/assets/img/email.png"
-           alt="Img-Email"/>
-    </a>
-    <p>
-      For direct communication, if absolutely necessary, the administrator can
-      be reached at <a href="mailto:jgomallette@gmail.com">this email</a>.
-    </p>
+  <div class="clearfix">
+    <div class="about-vertical-container">
+      <h3>Github</h3>
+      <a href="https://github.com/MrCerealKiller/homestead-project" target="_blank">
+        <img class="selectDisable"
+             id="github-img"
+             src="/assets/img/github.png"
+             alt="Img-Email"/>
+      </a>
+      <p>
+        This project is open source and posted on Github. To access, collaborate,
+        or report bugs please click on the above image.
+      </p>
+    </div>
+    <div class="about-vertical-container right">
+      <h3>Email</h3>
+      <a href="mailto:jgomallette@gmail.com">
+        <img class="selectDisable"
+             id="email-img"
+             src="/assets/img/email.png"
+             alt="Img-Email"/>
+      </a>
+      <p>
+        For direct communication, if absolutely necessary, the administrator can
+        be reached at <a href="mailto:jgomallette@gmail.com">this email</a>.
+      </p>
+    </div>
   </div>
 </div>
