--- a/frontend/src/assets/css/buttons.css
+++ b/frontend/src/assets/css/buttons.css
@@ -50,3 +50,10 @@
 .button-light:hover {
   background-color: #F6CECE;
 }
+
+#back-button {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 64px 16px 16px;
+}
