--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -93,6 +93,10 @@ p {
   font-family: "Share Tech Mono", "Courier New", Courier, monospace;
 }
 
+.data {
+  border-left: 1px solid rgba(20, 20, 20, 0.25);
+}
+
 /* Misc. Object
 ------------------------------------------------------------------------------*/
 
