--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -102,3 +102,17 @@
 .text-container#device-page p {
   text-align: left;
 }
+
+.text-container#error-page {
+  margin: 80px auto;
+  align-content: center;
+  text-align: center;
+}
+
+.text-container#error-page img {
+  display: block;
+  margin: 0px auto;
+  padding: 16px;
+  width: 75%;
+  max-width: 212px !important;
+}
