Sassify all css

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -19,7 +19,7 @@
     a production release. As such, if you decide to use our service, please
     consider carefully the data that is transferred through this service.
   </p>
-  <div class="about-vertical-container">
+  <div class="dual-vertical-container">
     <h3>Github</h3>
     <a href="https://github.com/MrCerealKiller/homestead-project" target="_blank">
       <img class="selectDisable"
@@ -32,7 +32,7 @@
       or report bugs please click on the above image.
     </p>
   </div>
-  <div class="about-vertical-container right">
+  <div class="dual-vertical-container right">
     <h3>Email</h3>
     <a href="mailto:jgomallette@gmail.com">
       <img class="selectDisable"
