--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,13 +1,13 @@
 <div class="container text-container" id="profile-page">
   <!-- <h2 [(ngModel)]="username" name="username">Foo Yeah</h2> -->
   <h1>{{username}}</h1>
-  <div class="about-vertical-container">
+  <div class="dual-vertical-container">
     <img class="selectDisable"
              id="profile-img"
              src="/assets/img/account-dark.png"
              alt="Img-Profile"/>
   </div>
-  <div class="about-vertical-container right">
+  <div class="dual-vertical-container right">
     <h4>Email</h4>
     <p>{{email}}</p>
     <br><br>
