--- a/frontend/src/sass/components/_alerts.scss
+++ b/frontend/src/sass/components/_alerts.scss
@@ -1,9 +1,5 @@
 /**
- * Flash Messages
- *
- * Generic formatting for the flash messages / alerts that appear on the top of
- * the screen
- *
+ * Alerts - Customizing the Flash Messages Module
  * @author Jeremy Mallette
  * @version 1.0.0
  */
@@ -13,19 +9,17 @@
   position: fixed;
   top: 5%;
   left: 5%;
-  z-index: 1000000;
-  margin: 16px auto;
+  @include z('alerts');
+  margin: $margin-standard auto;
   width: 90%;
 
   align-content: center;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: $shadow-main;
 }
 
 .flash-message p {
+  @include font($font-main, 1em, $theme-color-font);
   text-align: center;
-  font-family: "Montserrat", helvetica, sans-serif;
-  font-size: 1em;
-  color: #151515;
 }
 
 .flash-message:hover {
@@ -63,5 +57,5 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  z-index: 9999;
+  @include z('modal');
 }
