--- a/frontend/src/sass/components/_modals.scss
+++ b/frontend/src/sass/components/_modals.scss
@@ -1,8 +1,5 @@
 /**
- * Main Style sheet
- *
- * Very Generic Styles and all necessary imports
- *
+ * Modals Support
  * @author Jeremy Mallette
  * @version 1.0.0
  */
@@ -10,7 +7,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 99;
+    @include z('modal');
     left: 0;
     top: 0;
     width: 100%;
@@ -20,13 +17,14 @@
     background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+// Modal Content/Box
 .modal-content {
+    @include z('modal-content');
     margin: 20% auto;
-    padding: 32px;
+    padding: $padding-thick;
     width: 80%;
 
-    /*border: 4px solid #DC143C;*/
-    background-color: #F2F2F2;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    //border: 4px solid #DC143C;
+    background-color: $background-off;
+    box-shadow: $shadow-main;
   }
