Bug fixes from merge

--- a/frontend/src/app/components/device-page/device-page.component.html
+++ b/frontend/src/app/components/device-page/device-page.component.html
@@ -8,14 +8,14 @@
   <button class="collapse-header" (click)="expand(0)">Data</button>
   <div class="collapse-panel">
     <div class="clearfix">
-      <div class="about-vertical-container left">
+      <div class="dual-vertical-container left">
         <h2>Standard Data</h2>
         <p class="data"><strong>Device Service: </strong><br>{{device?.deviceService}}</p>
         <p class="data"><strong>IP Address: </strong><br>{{device?.lastIpAddress}}</p>
         <p class="data"><strong>Status: </strong><br>{{device?.lastStatusUpdate}}</p>
         <p class="data"><strong>Last Updated: </strong><br>{{device?.dateLastUpdated}}</p>
       </div>
-      <div class="about-vertical-container data-container right">
+      <div class="dual-vertical-container data-container right">
         <h2>Custom Data</h2>
         <p class="data">This feature has yet to be implemented.</p>
       </div>
