--- a/frontend/src/sass/styles.scss
+++ b/frontend/src/sass/styles.scss
@@ -30,6 +30,8 @@
 
 @import 'pages/about';
 @import 'pages/dashboard';
+@import 'pages/device-page';
+@import 'pages/error';
 @import 'pages/home';
 @import 'pages/profile';
 
