--- a/frontend/src/sass/pages/_device-page.scss
+++ b/frontend/src/sass/pages/_device-page.scss
@@ -9,7 +9,7 @@
 }
 
 .text-container#device-page h1, h2, h3, h4 {
-  margin-top: 16px;
+  margin-top: $margin-standard;
 
   text-align: center;
   align-content: center;
@@ -17,4 +17,8 @@
 
 .text-container#device-page p {
   text-align: left;
+}
+
+.data {
+  border-left: 1px solid rgba(21, 21, 21, 0.2);
 }
