--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -642,6 +642,42 @@ a:visited {
   background-color: #F6CECE; }
 
 /**
+ * Elements Belonging to the Device Page
+ * @author Jeremy Mallette
+ * @version 1.0.0
+ */
+.text-container#device-page {
+  margin: 80px auto; }
+
+.text-container#device-page h1, h2, h3, h4 {
+  margin-top: 16px;
+  text-align: center;
+  align-content: center; }
+
+.text-container#device-page p {
+  text-align: left; }
+
+.data {
+  border-left: 1px solid rgba(21, 21, 21, 0.2); }
+
+/**
+ * Elements Belonging to the Error Page
+ * @author Jeremy Mallette
+ * @version 1.0.0
+ */
+.text-container#error-page {
+  margin: 80px auto;
+  align-content: center;
+  text-align: center; }
+
+.text-container#error-page img {
+  display: block;
+  margin: 0px auto;
+  padding: 16px;
+  width: 75%;
+  max-width: 212px !important; }
+
+/**
  * Elements Belonging to the Home Page
  * @author Jeremy Mallette
  * @version 1.0.0
